[gd_scene load_steps=4 format=2]

[ext_resource path="res://dialog_node/choice_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://dialog_node/base_dialog_node.gd" type="Script" id=2]
[ext_resource path="res://dialog_node/dialog_inputs.tscn" type="PackedScene" id=3]

[node name="BaseDialogNode" type="GraphNode"]
anchor_top = -0.000964491
anchor_bottom = -0.000964491
margin_top = -2.06109
margin_right = 263.0
margin_bottom = 309.939
title = "0"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 247.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 247.0
margin_bottom = 63.0
text = "multiple choice"

[node name="DialogInputs" parent="." instance=ExtResource( 3 )]
margin_top = 64.0
margin_right = 247.0
margin_bottom = 316.0

[node name="NextLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 317.0
margin_right = 247.0
margin_bottom = 331.0
text = "Next"

[node name="ChoiceMenu" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 16.0
margin_top = 332.0
margin_right = 247.0
margin_bottom = 370.0
[connection signal="close_request" from="." to="." method="_on_DialogNode_close_request"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="add_choice" from="ChoiceMenu" to="." method="_on_ChoiceMenu_add_choice"]
[connection signal="delete_choice" from="ChoiceMenu" to="." method="_on_ChoiceMenu_delete_choice"]
